--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <meta name="twitter:card" content="summary" />
 
     <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- Import the webpage's javascript file -->
     <script src="/script.js" defer></script>
@@ -48,10 +48,10 @@
     <div class="wrapper">
       <div class="content" role="main">
         <!-- This is the start of content for our page -->
-        <h1 class="title">こんにちは世界!</h1>
+        <h1 class="title">無題</h1>
 
         <img
-          src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
+          src="assets/images/image.png"
           class="illustration"
           alt="Editor illustration"
           title="Click the image!"
